--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-p, h1, h2, h3, {
+p, h1, h2, h3 {
 margin: 0;
 }
 
@@ -36,11 +36,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 }
 
  .current::after {
-content: "";
+  content: "";
  position: absolute;
  left: 0;
  bottom: -1px;
  background-color: #404bbf;
+ color: #404BBF;
  height: 4px;
  border-radius: 2px;
  display: block;
@@ -345,9 +346,7 @@ border-top-right-radius: 0px;
 border-top-right-radius: 4px;
 border-bottom-left-radius: 4px;
 margin-bottom: 8px;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-0px 1px 1px rgba(46, 47, 66, 0.16),
-0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 
 .container-team { 
@@ -365,6 +364,9 @@ padding: 32px 0
   background-color: var(--primary-background-color);
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .footer {
@@ -487,7 +489,7 @@ padding: 32px 0
   margin-bottom: 48px;
   position: relative;
   overflow: hidden;
-  
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -495,9 +497,7 @@ padding: 32px 0
   }
 
 .link-container {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
+ 
 }
 
 .tittle-box {
@@ -532,9 +532,9 @@ padding: 32px 0
 }
 
 .section-hero{
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-url(../images/people-office\ 1.jpg), linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-url(../images/people-office\ 1.jpg);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) 
+url(../images/people-office.jpg);
+
 max-width: 1440px;
 background-repeat: no-repeat;
 background-size: cover;
@@ -669,7 +669,7 @@ margin: 24px 100px;
     fill: #f4f4fd;
   }
  
-  .footer-icon-svg {
+  .footer-icon-svg.link {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -681,9 +681,9 @@ margin: 24px 100px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
  
-  .footer-icon-svg:focus,
-  .footer-icon-svg:hover {
-background-color: #31d0aa;}
+.footer-icon-svg.link:focus,
+.footer-icon-svg.link:hover {
+  background-color: #31d0aa;}
 
 .backdrop {
   position: fixed;
@@ -818,9 +818,10 @@ background-color: #31d0aa;}
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-container:hover .portfolio-strategy-p {
-  transform: translateY(0);
-}
+ .link-category:hover .portfolio-strategy-p,
+ .link-category:focus .portfolio-strategy-p {
+   transform: translateY(0);
+ }
 
 .portfolio-list:hover,
 .portfolio-list:focus {
