--- a/css/style.css
+++ b/css/style.css
@@ -531,10 +531,9 @@ padding: 32px 0
   padding: 0 316px;
 }
 
-.section-hero{
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) 
+.section-hero {
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
 url(../images/people-office.jpg);
-
 max-width: 1440px;
 background-repeat: no-repeat;
 background-size: cover;
