--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,15 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
  left: 0;
  bottom: -1px;
  background-color: #404bbf;
- color: #404BBF;
  height: 4px;
  border-radius: 2px;
  display: block;
  width: 100%;
  }
+
+.current {
+  color: #404BBF;
+}
 
 .header-container {
   display: flex;
