--- a/css/style.css
+++ b/css/style.css
@@ -488,12 +488,11 @@ padding: 32px 0
 .portfolio-ul {
   display: flex;
   flex-wrap: wrap;
+  gap: 48px, 24px;
 }
 
 .portfolio-list{
   width: calc((100% - 48px) / 3);
-  margin-right: 24px;
-  margin-bottom: 48px;
   position: relative;
   overflow: hidden;
 
@@ -559,7 +558,6 @@ padding: 188px 0px;
 
 .features-li {
   width: 264px;
-  text-align: center;
 }
 .svg-box {
   display: flex;
@@ -837,13 +835,11 @@ margin: 24px 100px;
 .portfolio-list:nth-child(9),
 .portfolio-list:nth-child(7),
 .portfolio-list:nth-child(8) {
-  margin-right: 0;
 }
 
 .portfolio-list:nth-child(9),
 .portfolio-list:nth-child(7),
 .portfolio-list:nth-child(8) {
-  margin-bottom: 0;
 }
 
 /*header*/
