--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@ padding: 32px 0
 .portfolio-ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px, 24px;
+  gap: 48px 24px;
 }
 
 .portfolio-list{
